src/objects/Case/fields/Rolled_up_Amount__c.field-meta.xml
<CustomField>
    <fullName>Rolled_up_Amount__c</fullName>
    <inlineHelpText>Sum of RMA lines - amount</inlineHelpText>
    <label>Rolled up Amount</label>
    <summarizedField>RMA_Request_Line__c.Amount__c</summarizedField>
    <summaryForeignKey>RMA_Request_Line__c.RMA_Request__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>