src/objects/Case/fields/Sales_Manager_E_Mail__c.field-meta.xml
<CustomField>
    <fullName>Sales_Manager_E_Mail__c</fullName>
    <formula>Finisar_Sales_Manager__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Manager E-Mail</label>
    <type>Text</type>
</CustomField>