src/objects/Case/fields/Sales_Rep_Firm__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_Firm__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Rep Firm Account</inlineHelpText>
    <label>Sales Rep Firm</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Sales Rep Firm</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases / RMA Requests (Sales Rep Firm)</relationshipLabel>
    <relationshipName>CaseRepFirmAccounts</relationshipName>
    <type>Lookup</type>
</CustomField>