src/objects/Case/fields/SalesFirmGroupName__c.field-meta.xml
<CustomField>
    <fullName>SalesFirmGroupName__c</fullName>
    <formula>Sales_Rep_Firm__r.Legacy_Id__c</formula>
    <label>SalesFirmGroupName</label>
    <type>Text</type>
</CustomField>