src/objects/Case/fields/SalesVP__c.field-meta.xml
<CustomField>
    <fullName>SalesVP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales VP</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Case_RMA_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>