src/objects/Case/fields/SerialNumber__c.field-meta.xml
<CustomField>
    <fullName>SerialNumber__c</fullName>
    <label>Serial Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>