src/objects/Case/fields/Signature__c.field-meta.xml
<CustomField>
    <fullName>Signature__c</fullName>
    <label>Stored Signature</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>