src/objects/Case/fields/Signature_Image__c.field-meta.xml
<CustomField>
    <fullName>Signature_Image__c</fullName>
    <formula>IF(NOT(ISBLANK(Signature_URL__c )),IMAGE(Signature_URL__c ,&apos;Signature&apos;),&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Signature</label>
    <type>Text</type>
</CustomField>