src/objects/Case/fields/Signature_Key__c.field-meta.xml
<CustomField>
    <fullName>Signature_Key__c</fullName>
    <label>Signature Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>