src/objects/Case/fields/Signature_URL__c.field-meta.xml
<CustomField>
    <fullName>Signature_URL__c</fullName>
    <label>Signature URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>