src/objects/Case/fields/Size__c.field-meta.xml
<CustomField>
    <fullName>Size__c</fullName>
    <label>Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2&quot; (50mm)</fullName>
            </value>
            <value>
                <fullName>3&quot; (75mm)</fullName>
            </value>
            <value>
                <fullName>4&quot; (100mm)</fullName>
            </value>
            <value>
                <fullName>6&quot; (150mm)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>