src/objects/Case/fields/SVP_of_Sales__c.field-meta.xml
<CustomField>
    <fullName>SVP_of_Sales__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SVP of Sales</label>
    <referenceTo>User</referenceTo>
    <relationshipName>RMACases1</relationshipName>
    <type>Lookup</type>
</CustomField>