src/objects/Case/fields/SW_Version__c.field-meta.xml
<CustomField>
    <fullName>SW_Version__c</fullName>
    <label>SW Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>