src/objects/Case/fields/TotalAmountBU0030__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountBU0030__c</fullName>
    <label>Total Amount BU 0030</label>
    <summarizedField>RMA_Request_Line__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>RMA_Request_Line__c.Business_Unit__c</field>
        <operation>equals</operation>
        <value>0030</value>
    </summaryFilterItems>
    <summaryForeignKey>RMA_Request_Line__c.RMA_Request__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>