src/objects/Case/fields/Use_Different_Price_than_Original_PO_Pri__c.field-meta.xml
<CustomField>
    <fullName>Use_Different_Price_than_Original_PO_Pri__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Use Different Price than Original PO Price</inlineHelpText>
    <label>Use Diff Price than Original PO Price</label>
    <type>Checkbox</type>
</CustomField>