src/objects/Case/fields/Use_Original_PO_Number_s_linked_to_seri__c.field-meta.xml
<CustomField>
    <fullName>Use_Original_PO_Number_s_linked_to_seri__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Use Original PO Number(s) linked to serial number(s) of return part(s)</inlineHelpText>
    <label>Use Orig PO # linked to serial #</label>
    <type>Checkbox</type>
</CustomField>