src/objects/Case/fields/Validation_Status__c.field-meta.xml
<CustomField>
    <fullName>Validation_Status__c</fullName>
    <label>Validation Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>