src/objects/Case/fields/Virtual_RMA__c.field-meta.xml
<CustomField>
    <fullName>Virtual_RMA__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Virtual RMA (No Physical Movement of Parts)</inlineHelpText>
    <label>Virtual RMA</label>
    <type>Checkbox</type>
</CustomField>