src/objects/Case/fields/Wafer_ID__c.field-meta.xml
<CustomField>
    <fullName>Wafer_ID__c</fullName>
    <label>Wafer ID</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>