src/objects/Case/fields/Wavelength_BU_GM__c.field-meta.xml
<CustomField>
    <fullName>Wavelength_BU_GM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Wavelength BU GM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases3</relationshipName>
    <type>Lookup</type>
</CustomField>