src/objects/Case/fields/X3DSensing_BU_GM__c.field-meta.xml
<CustomField>
    <fullName>X3DSensing_BU_GM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>3DSensing BU GM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>RMACases2</relationshipName>
    <type>Lookup</type>
</CustomField>