src/objects/Case/recordTypes/Case.recordType-meta.xml
<RecordType>
    <fullName>Case</fullName>
    <active>true</active>
    <businessProcess>Case</businessProcess>
    <description>Case</description>
    <label>FAE Case</label>
</RecordType>