src/objects/Case/recordTypes/Comcast_Case.recordType-meta.xml
<RecordType>
    <fullName>Comcast_Case</fullName>
    <active>true</active>
    <businessProcess>Case</businessProcess>
    <description>Comcast case</description>
    <label>Comcast Case</label>
</RecordType>