src/objects/Case/recordTypes/DA_Case.recordType-meta.xml
<RecordType>
    <fullName>DA_Case</fullName>
    <active>true</active>
    <businessProcess>DA</businessProcess>
    <label>DA Case</label>
</RecordType>