src/objects/Case/recordTypes/RMA_Request.recordType-meta.xml
<RecordType>
    <fullName>RMA_Request</fullName>
    <active>true</active>
    <businessProcess>RMA Request</businessProcess>
    <description>Return Material Authorization</description>
    <label>RMA Request</label>
</RecordType>