src/objects/Case/validationRules/ClosedRMAUpdateForRip.validationRule-meta.xml
<ValidationRule>
    <fullName>ClosedRMAUpdateForRip</fullName>
    <active>true</active>
    <errorConditionFormula>AND( PRIORVALUE(Status__c) = &apos;Closed&apos;,  ISPICKVAL($User.UserType, &apos;PowerPartner&apos;),
 RecordType.DeveloperName = &apos;RMA_Request&apos; )</errorConditionFormula>
    <errorMessage>Closed RMAs cannot be updated. Please contact RMA Admin.</errorMessage>
</ValidationRule>