src/objects/Case/validationRules/IncidentIdRequiredforSW.validationRule-meta.xml
<ValidationRule>
    <fullName>IncidentIdRequiredforSW</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Disposition__c  , &apos;Software&apos;)  &amp;&amp;  ISBLANK(Incident_ID__c) &amp;&amp;  RecordType.DeveloperName = &apos;Comcast_Case&apos;</errorConditionFormula>
    <errorMessage>Incident ID# should be provided for SW issue.</errorMessage>
</ValidationRule>