src/objects/Case/validationRules/RMAnoRequiredforHW.validationRule-meta.xml
<ValidationRule>
    <fullName>RMAnoRequiredforHW</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Disposition__c  , &apos;Hardware&apos;)  &amp;&amp;  ISBLANK(RMA_Order_Number__c  ) &amp;&amp;  RecordType.DeveloperName = &apos;Comcast_Case&apos;</errorConditionFormula>
    <errorMessage>RMA No# Should be provided for Hard Ware Issue.</errorMessage>
</ValidationRule>