src/objects/Case/validationRules/Standard_Status_cannot_be_Changed.validationRule-meta.xml
<ValidationRule>
    <fullName>Standard_Status_cannot_be_Changed</fullName>
    <active>false</active>
    <errorConditionFormula>ISCHANGED( Status ) &amp;&amp;  RecordType.Name = &apos;RMA Request&apos;</errorConditionFormula>
    <errorMessage>Status cannot be changed manually.</errorMessage>
</ValidationRule>