src/objects/Case/listViews/AdvMat_Case.listView-meta.xml
<ListView>
    <fullName>AdvMat_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>AdvMat</label>
    <queue>AdvMat</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>