src/objects/Case/listViews/Comcast_FAE_Case.listView-meta.xml
<ListView>
    <fullName>Comcast_FAE_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Comcast FAE</label>
    <queue>Comcast_FAE</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>