src/objects/Case/listViews/FAE_Cases.listView-meta.xml
<ListView>
    <fullName>FAE_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>OWNER_NAME</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Case</value>
    </filters>
    <label>FAE Cases</label>
</ListView>