src/objects/Case/listViews/HighYAG_Queue_Case.listView-meta.xml
<ListView>
    <fullName>HighYAG_Queue_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>HighYAG Queue</label>
    <queue>HighYAG_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>