src/objects/Case/listViews/MyCases.listView-meta.xml
<ListView>
    <fullName>MyCases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>Case_Status__c</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <label>My Case / RMA Requests</label>
</ListView>