src/objects/Case/listViews/Pending_RMA_Admin_Review.listView-meta.xml
<ListView>
    <fullName>Pending_RMA_Admin_Review</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>RMA_Order_Number__c</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>Status__c</columns>
    <columns>Assigned_RMA_Admin__c</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>Contract_Manufacturer__c</columns>
    <columns>Fault_Location__c</columns>
    <columns>Requested_Service__c</columns>
    <columns>Virtual_RMA__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.RMA_Request</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>Pending RMA Admin Review</value>
    </filters>
    <label>Pending RMA Admin Review</label>
</ListView>